building out a testing jekyll site area added pages and post templates as well as a couple of test includes

--- a/index.html
+++ b/index.html
@@ -9,4 +9,11 @@ layout: defaults
   <p>
   Welcome to Jake Schoolmeesters' Test Site! Please, check out my <a href="/portfolio/">Portfolio</a> to see my work.
   </p>
+
+  {% include testInclude.html %}
+
+  {% include bannerOne.html %}
+
+  {% include testInclude.html %}
+
 </section>
